// Copyright Â© 2018 Privategrity Corporation
//
// All rights reserved.


syntax = "proto3";

package mixmessages;

// The greeting service definition.
service MixMessageService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Error (ErrorBroadcast) returns (ErrorAck) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// ErrorBroadcast encodes an error message
message ErrorBroadcast {
  string Message = 1;
}

// ErrorAck returns the length of the received messages
message ErrorAck {
  int32 MsgLen = 1;
}
